Change profile-image and down-arrow resolution to perfect pixel

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -13,13 +13,13 @@ import down_arrow_image from "../images/down-arrow.png";
             <button class="smooth call_to_action" data-smooth-delay="1000"><a href="#about_me">Find More About Me &RightArrow;</a></button>
         </div>
         <div class="profile_picture">
-            <Image src={profile_picture} alt="profile picture" width="240" class="smooth profile_image" data-smooth-delay="500" />
+            <Image src={profile_picture} alt="profile picture" height={641} class="smooth profile_image" data-smooth-delay="500" />
         </div>
     </div>
     <div class="decoration"></div>
     <div class="down_arrow smooth" data-smooth-delay="1200">
         <a href="#about_me">
-            <Image src={down_arrow_image} alt="down arrow" width={30} fetchpriority="high" />
+            <Image src={down_arrow_image} alt="down arrow" width={45} fetchpriority="high" />
         </a>
     </div>
 </section>
