--- a/src/styles/hero_section.css
+++ b/src/styles/hero_section.css
@@ -20,6 +20,8 @@
   position: absolute;
   left: 50%;
   bottom: 50px;
+  scale: 0.75;
+  transform: translateX(-50%) !important;
 }
 .down_arrow > a {
   position: relative;
@@ -103,4 +105,5 @@
   position: relative;
   left: 40px;
   background-color: #305;
+  scale: 0.8;
 }/*# sourceMappingURL=hero_section.css.map */
