Changes to improve performance!
1. Better image resolution
2. Better image format (all move to .webp)
3. Add visual navigation to click the image when the user use phone instead of desktop with cursor
4. Add website logo
5. Add website icon
6. Add navigation bar
7. Fix some unbalanced layout in specific device dimension

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import down_arrow_image from "../images/down-arrow.png";
+import down_arrow_image from "../images/down-arrow.webp";
 
 ---
 
