--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets"
-import profile_picture from "../images/profile-picture.png";
-import down_arrow_image from "../images/down-arrow.png";
+import profile_picture from "../images/profile-picture.webp";
+import down_arrow_image from "../images/down-arrow.webp";
 
 ---
 <section class="section hero">
