--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,6 +15,7 @@ const { title }  = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
         <meta name="description" content="Ridwan Bagoes Setiawan Profile Website">
+		<link rel="shortcut icon" href="/realm-logo-blk.webp" type="image/x-icon">
 		<title>{title}</title>
 	</head>
 	<body>
