--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/hero.astro";
 import Showcase from "../components/showcase.astro";
 import Footer from "../components/footer.astro";
 import About from "../components/about.astro";
+import Navbar from "../components/navbar.astro";
 
 import "../styles/hero_section.css";
 import "../styles/about.css";
@@ -14,6 +15,7 @@ import "../styles/white_br.css";
 ---
 
 <MainLayouts title="Ridwan's Entrance">
+	<Navbar />
 	<Hero />
 	<About />
 	<Showcase />
