--- a/src/styles/hero_section.css
+++ b/src/styles/hero_section.css
@@ -4,6 +4,11 @@
   width: 100vw;
   height: calc(100vh - 100px);
 }
+@media (max-width: 500px) {
+  .hero {
+    padding: 50px 0;
+  }
+}
 .hero .decoration {
   width: 100vw;
   height: 100px;
@@ -20,7 +25,6 @@
   position: absolute;
   left: 50%;
   bottom: 50px;
-  scale: 0.75;
   transform: translateX(-50%) !important;
 }
 .down_arrow > a {
@@ -105,5 +109,4 @@
   position: relative;
   left: 40px;
   background-color: #305;
-  scale: 0.8;
 }/*# sourceMappingURL=hero_section.css.map */
