FIX IMAGE RESOLUTION BAD PERFORMANCE

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import down_arrow_image from "../images/down-arrow.webp";
+import ArrowDown from "./arrow_down.astro";
 
 ---
 
@@ -14,7 +14,7 @@ import down_arrow_image from "../images/down-arrow.webp";
     </div>
     <div class="down_arrow">
         <a href="#showcase">
-            <Image src={down_arrow_image} alt="down arrow" width={45} />
+            <ArrowDown />
         </a>
     </div>
 </section>
