--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -13,7 +13,13 @@ import ArrowDown from "./arrow_down.astro";
             <button class="smooth call_to_action" data-smooth-delay="1000"><a href="#about_me">Find More About Me &RightArrow;</a></button>
         </div>
         <div class="profile_picture">
-            <Image src={profile_picture} alt="profile picture" widths={[profile_picture.width/2, profile_picture.width]} sizes={`(max-width: 550px) ${profile_picture.width/2}px, ${profile_picture.width}px`} class="smooth profile_image" data-smooth-delay="500" />
+            <Image 
+            src={profile_picture} 
+            alt="profile picture" 
+            width={360}
+            widths={[profile_picture.width/8, profile_picture.width/4, profile_picture.width/2]} 
+            sizes={`(max-width: 550px) ${profile_picture.width/2}px, (max-width: 650px) ${profile_picture.width/4}px, ${profile_picture.width/8}px`} 
+            class="smooth profile_image" data-smooth-delay="500" />
         </div>
     </div>
     <div class="decoration"></div>
