--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -5,7 +5,7 @@ import "../styles/navbar.css";
 
 ---
 
-<nav class="navbar smooth" data-smooth-delay="100">
+<nav class="navbar">
     <a href="/" class="home">
         <Image src={RealmLogo} alt="Realm Logo" width={100}/>
     </a>
