--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -17,8 +17,8 @@ import ArrowDown from "./arrow_down.astro";
             src={profile_picture} 
             alt="profile picture" 
             width={360}
-            widths={[Math.ceil(profile_picture.width/3), profile_picture.width/2, profile_picture.width]} 
-            sizes={`(max-width: 550px) ${profile_picture.width}px, (max-width: 850px) ${profile_picture.width/2}px, ${Math.ceil(profile_picture.width/3)}px`} 
+            widths={[profile_picture.width/4, Math.ceil(profile_picture.width/3), profile_picture.width/2]} 
+            sizes={`(max-width: 550px) ${profile_picture.width/2}px, (max-width: 850px) ${Math.ceil(profile_picture.width/3)}px, ${profile_picture.width/4}px`} 
             class="smooth profile_image" data-smooth-delay="500" />
         </div>
     </div>
