--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import "../styles/white_br.css";
 	<Footer />
 </MainLayouts>
 
-<style is:global>
+<style is:global nonce="rAnd0m">
 	section {
 		overflow: hidden;
 	}
