--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -7,7 +7,7 @@ import "../styles/navbar.css";
 
 <nav class="navbar">
     <a href="/" class="home">
-        <Image src={RealmLogo} alt="Realm Logo" width={100}/>
+        <Image src={RealmLogo} alt="Realm Logo" width={100} fetchpriority="high" />
     </a>
     <ul>
         <li><a href="/#about_me">About Me</a></li>
