--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,9 +15,9 @@ const { title }  = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
         <meta name="description" content="Ridwan Bagoes Setiawan Profile Website">
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; img-src 'self'; style-src 'unsafe-inline'; ">
-		<meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'; img-src 'self'; style-src 'unsafe-inline'; ">
-		<meta http-equiv="X-WebKit-CSP" content="default-src 'self'; script-src 'self'; img-src 'self'; style-src 'unsafe-inline'; ">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://realm-iwan.vercel.app/; script-src 'self' 'unsafe-inline'; img-src 'self'; style-src 'unsafe-inline'; frame-src 'none'; ">
+		<meta http-equiv="X-Content-Security-Policy" content="default-src 'self' https://realm-iwan.vercel.app/; script-src 'self' 'unsafe-inline'; img-src 'self'; style-src 'unsafe-inline'; frame-src 'none'; ">
+		<meta http-equiv="X-WebKit-CSP" content="default-src 'self' https://realm-iwan.vercel.app/; script-src 'self' 'unsafe-inline'; img-src 'self'; style-src 'unsafe-inline'; frame-src 'none'; ">
 		<link rel="shortcut icon" href="/realm-logo-blk.webp" type="image/x-icon">
 		<title>{title}</title>
 	</head>
