--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from "@vercel/speed-insights/astro"
 
 interface Props {
     title:string,
@@ -9,8 +10,9 @@ const { title }  = Astro.props;
 ---
 
 
+
 <html lang="en">
-	<head>
+<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
@@ -22,7 +24,8 @@ const { title }  = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-        <slot />
+<SpeedInsights />
+<slot />
 		<script src="../typescript/appear.ts" />
 	</body>
 </html>
