--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -10,7 +10,7 @@ import ArrowDown from "./arrow_down.astro";
             <p class="smooth greeting" data-smooth-delay="100">Hello! i'm,</p>
             <h1 class="smooth profile_name" data-smooth-delay="350">Ridwan Bagoes Setiawan</h1>
             <p class="smooth profile_description" data-smooth-delay="600">FullStack Engineer</p>
-            <button class="smooth call_to_action" data-smooth-delay="1000"><a href="#about_me">Find More About Me &RightArrow;</a></button>
+            <button class="smooth call_to_action" data-smooth-delay="1000" onclick="window.location.href = '#about_me'">Find More About Me &RightArrow;</button>
         </div>
         <div class="profile_picture">
             <Image 
