--- a/src/pages/projects/[project_url].astro
+++ b/src/pages/projects/[project_url].astro
@@ -89,7 +89,7 @@ const project = projects.filter((data) =>
         </div>
     </div>
     <button class="back-to-home">
-        <a href="../">Back to home</a>
+        <a href="../#showcase">Back to home</a>
     </button>
     <Footer />
 </MainLayout>
