--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -12,6 +12,6 @@ import "../styles/navbar.css";
     <ul>
         <li><a href="/#about_me">About Me</a></li>
         <li><a href="/#showcase">Showcase</a></li>
-        <li><a href="/Ridwan Bagoes Setiawan CV.pdf" download>My CV</a></li>
+        <li><a href="/Ridwan Bagoes Setiawan CV.pdf" download="Ridwan Bagoes Setiawan CV.pdf">My CV</a></li>
     </ul>
 </nav>
